# carafe

./: CMakeLists.txt  README.md  carafe.cpp  carafe.hpp  main.cpp
src/: carafe.cpp  carafe.hpp
test/: CMakeLists.txt  functional.sh  test.cpp
